Depend on Robolectric 3.1-SNAPSHOT.