@@ -34,6 +34,7 @@ dependencies {
 android.testOptions.unitTests.all {
     // configure max heap size of the test JVM
     maxHeapSize = '2048m'
+    jvmArgs '-XX:MaxPermSize=2048m'
 }
 
 android {
